week 3 updated